--- a/res/layout/city_choose_main.xml
+++ b/res/layout/city_choose_main.xml
@@ -8,7 +8,7 @@
     android:padding="@dimen/common_gap" >
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
