--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -49,16 +49,6 @@
         android:hint="815720q"
         android:inputType="textPassword" />
 
-    <ImageView
-        android:id="@+id/passcodeimage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/password"
-        android:layout_below="@+id/password"
-        android:layout_marginLeft="14dp"
-        android:minHeight="35dp"
-        android:src="@drawable/ic_action_back" />
-
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
@@ -74,5 +64,29 @@
         android:layout_alignBottom="@+id/passcodeimage"
         android:layout_alignLeft="@+id/textView3"
         android:text="验证码" />
+
+    <ImageView
+        android:id="@+id/passcodeimage"
+        android:layout_width="70dp"
+        android:layout_height="35dp"
+        android:layout_below="@+id/password"
+        android:layout_marginLeft="2dp"
+        android:layout_toRightOf="@+id/login"
+        android:minHeight="35dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_action_back" />
+
+   <EditText
+       android:id="@+id/passcode"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignLeft="@+id/login"
+       android:layout_alignRight="@+id/login"
+       android:layout_alignTop="@+id/passcodeimage"
+       android:ems="10"
+       android:maxLength="4"
+       android:maxLines="1" >
+
+    </EditText>
 
 </RelativeLayout>
