--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -46,7 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/passcodeimage"
         android:layout_alignLeft="@+id/textView3"
-        android:text="验证码" />
+        android:text="验证码"
+        android:textSize="17dp" />
 
    <EditText
        android:id="@+id/passcode"
@@ -97,7 +98,7 @@
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_alignLeft="@+id/textView2"
-       android:text="密码"
+       android:text="密   码"
        android:textSize="17dp" />
 
 </RelativeLayout>
