--- a/res/layout/passengerview_title.xml
+++ b/res/layout/passengerview_title.xml
@@ -5,26 +5,24 @@
     android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/passengername2"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:minWidth="42dp"
-        android:text="TextView" />
+        android:text="姓名" />
 
     <TextView
-        android:id="@+id/idnum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="43250311111111111" />
-
-    <TextView
-        android:id="@+id/mobilenum"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:minWidth="78dp"
-        android:text="15074469636" />
+        android:text="身份证号码" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="手机号码" />
 
 </LinearLayout>
