待同步后继续

--- a/res/layout/train_info_itemview.xml
+++ b/res/layout/train_info_itemview.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
-    android:useDefaultMargins="true" >
+    android:useDefaultMargins="true" 
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
