--- a/res/layout/activity_trains_info.xml
+++ b/res/layout/activity_trains_info.xml
@@ -12,7 +12,9 @@
         android:id="@+id/trainlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusable="true"
         android:text="@string/hello_world" />
+
 <!--  
     <FrameLayout
         android:layout_width="wrap_content"
