--- a/res/layout/activity_book_view.xml
+++ b/res/layout/activity_book_view.xml
@@ -205,7 +205,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/bv_submitorderbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="确认提交" />
